resources/testcases_static_checks/tests/positive/isJointlyGuarded/sticky-example-from-all-instance-restricted-termination-paper.rls
../../../tests_common_data/rule-classification-examples/sticky-example-from-all-instance-restricted-termination-paper.rls