resources/testcases_static_checks/tests/negative/isWeaklyAcyclic/d28.rls
../../../tests_common_data/rule-classification-examples/d28.rls